--- a/App/Views/DanhSachHoSo/index.html
+++ b/App/Views/DanhSachHoSo/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Danh sách hồ sơ
+Quản lý hồ sơ
 {% endblock %}
 {% block body %}
 <!-- page content -->
@@ -8,58 +8,43 @@ Danh sách hồ sơ
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Danh sách Hồ sơ</h3>
+                <h3>Danh sách hồ sơ</h3>
             </div>
             <div class="title_right">
-                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
-                        <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Go!</button>
-                  </span>
+                <form action="/admin/hoso/search" method="get" id="search">
+                    <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+
+                        <div class="input-group">
+                            <input type="text" name="key" class="form-control" placeholder="Từ khóa...">
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" type="submit" value="submit" form="search"><i class="fa fa-search"></i></button>
+                            </span>
+                        </div>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
-
         <div class="clearfix"></div>
-
         <div class="row">
             <div class="col-md-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>Projects</h2>
-                        <ul class="nav navbar-right panel_toolbox">
-                            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                   aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Settings 1</a>
-                                    </li>
-                                    <li><a href="#">Settings 2</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li><a class="close-link"><i class="fa fa-close"></i></a>
-                            </li>
-                        </ul>
+                        <h2>Danh sách hồ sơ</h2>
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-
-                        <p>Danh sách hồ sơ</p>
-
                         <!-- start project list -->
                         <table class="table table-striped projects">
                             <thead>
                             <tr>
                                 <th style="width: 1%">STT</th>
+                                <th>Hình ảnh</th>
                                 <th style="width: 10%">Mã hồ sơ</th>
                                 <th style="width: 20%">Họ và tên</th>
+                                <th>Đời thứ</th>
+                                <th>Con thứ</th>
                                 <th>Ngày sinh</th>
-                                <th>Hình ảnh</th>
+                                <th>Ngày mất</th>
                                 <th>Trạng thái</th>
                                 <th style="width: 20%">#Hành động</th>
                             </tr>
@@ -70,11 +55,6 @@ Danh sách hồ sơ
                             {% for hoSo in dsHoSo %}
                             <tr>
                                 <td>1</td>
-                                <td>{{ hoSo.MaHoSo }}
-
-                                </td>
-                                <td>{{ hoSo.HoTen }} <br> <small>Created 01.01.2015</small></td>
-                                <td>{{ hoSo.NgaySinh }}</td>
                                 <td>
                                     <ul class="list-inline">
                                         <li>
@@ -82,11 +62,18 @@ Danh sách hồ sơ
                                         </li>
                                     </ul>
                                 </td>
+                                <td>{{ hoSo.MaHoSo }}
+                                </td>
+                                <td>{{ hoSo.HoTen }} <br> <small>Khởi tạo 01.01.2015</small></td>
+                                <td>{{ hoSo.DoiThu }}</td>
+                                <td>{{ hoSo.ConThu }}</td>
+                                <td>{{ hoSo.NgaySinh }}</td>
+                                <td>{{ hoSo.NgayMat }}</td>
                                 <td>
-                                    <button type="button" class="btn btn-success btn-xs">Chờ duyệt</button>
+                                    <button type="button" class="btn btn-success btn-xs">Hiển thị</button>
                                 </td>
                                 <td>
-                                    <a href="/ho-so/{{ hoSo.MaHoSo }}" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Xem chi tiết </a>
+                                    <a href="/ho-so/{{ hoSo.MaHoSo }}" class="btn btn-primary btn-xs"><i class="fa fa-chain"></i> Xem chi tiết </a>
                                     <a href="#" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Sửa </a>
                                     <a href="#" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Xóa </a>
                                 </td>
@@ -102,7 +89,6 @@ Danh sách hồ sơ
             </div>
         </div>
     </div>
-</div>
 </div>
 <!-- /page content -->
 
