--- a/App/Views/BaiViet/danh_sach_bai_viet.html
+++ b/App/Views/BaiViet/danh_sach_bai_viet.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Danh sách hồ sơ
+Danh sách bài viết
 {% endblock %}
 {% block body %}
 <!-- page content -->
@@ -8,27 +8,13 @@ Danh sách hồ sơ
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Danh sách Bài Viết</h3>
-            </div>
-
-            <div class="title_right">
-                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
-                        <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Go!</button>
-                  </span>
-                    </div>
-                </div>
+                <h3>Danh sách bài viết</h3>
             </div>
         </div>
-
         <div class="clearfix"></div>
-
         <div class="row">
             <div class="col-md-12">
                 <div class="x_panel">
-
                     {% for baiViet in dsBaiViet %}
                     <div class="media">
                         {% if baiViet.HinhAnh is not null and baiViet.HinhAnh != '' %}
@@ -38,50 +24,16 @@ Danh sách hồ sơ
                             <div class="media-left"><a href="#"><img src="/images/AnhBaiViet/camera.png"
                                                                  style="width: 64px; height: 64px;"> </a></div>
                         {% endif %}
-
                         <div class="media-body"><h4 class="media-heading">{{ baiViet.MaBaiViet }} - {{baiViet.TieuDe
                             }} <a class="btn btn-primary btn-sm" href="/admin/baiviet/{{ baiViet.MaBaiViet }}/getSuaBaiViet"><i class="fa fa-edit"></i> Chỉnh sửa</a><button class="btn btn-primary btn-sm"><i class="fa fa-delicious"></i> Xóa</button></h4> {{ baiViet.NoiDung | striptags | slice(0, 200) ~ '...' }}
                         </div>
                     </div>
+                    <hr>
                     {% endfor %}
-                    <!-- Small modal -->
-                    <!--<br>-->
-                    <!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalThemDanhMuc"><i class="fa fa-plus"></i>Thêm danh mục</button>-->
-
-                    <!--<div class="modal fade" id="modalThemDanhMuc" tabindex="-1" role="dialog" aria-hidden="true">-->
-                    <!--<div class="modal-dialog modal-sm">-->
-                    <!--<div class="modal-content">-->
-
-                    <!--<div class="modal-header">-->
-                    <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span>-->
-                    <!--</button>-->
-                    <!--<h4 class="modal-title" id="myModalLabel2">Thêm danh mục</h4>-->
-                    <!--</div>-->
-                    <!--<div class="modal-body">-->
-                    <!--<form action="/admin/loaitin/postThemLoaiTin" method="post" id="danh-muc">-->
-                    <!--<div class="form-group">-->
-                    <!--<label for="tendanhmuc" class="form-control-label">Tên danh mục</label>-->
-                    <!--<input type="text" id="tendanhmuc" name="tenLoaiTin" class="form-control">-->
-
-                    <!--<label for="mota" class="form-control-label">Mô tả</label>-->
-                    <!--<input type="text" id="mota" name="mota" class="form-control">-->
-                    <!--</div>-->
-                    <!--</form>-->
-                    <!--</div>-->
-                    <!--<div class="modal-footer">-->
-                    <!--<button class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-                    <!--<button class="btn btn-success" type="submit" form="danh-muc" value="Submit">Thêm</button>-->
-                    <!--</div>-->
-
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--&lt;!&ndash; /modals &ndash;&gt;-->
                 </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 <!-- /page content -->
 
