--- a/App/Views/GiaPha/gia_pha_dung.html
+++ b/App/Views/GiaPha/gia_pha_dung.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Danh sách hồ sơ
+Gia phả dạng đứng
 {% endblock %}
 {% block body %}
 <style>
@@ -63,30 +63,16 @@ Danh sách hồ sơ
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Danh sách Hồ sơ</h3>
-            </div>
-
-            <div class="title_right">
-                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
-                        <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Go!</button>
-                  </span>
-                    </div>
-                </div>
+                <h3>Phả đồ</h3>
             </div>
         </div>
-
         <div class="clearfix"></div>
-
         <div class="row">
 
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>User Report
-                            <small>Activity report</small>
+                        <h2>Phả đồ dạng đứng
                         </h2>
                         <div class="clearfix"></div>
                     </div>
