--- a/App/Views/HoSoNgoaiToc/them_ho_so.html
+++ b/App/Views/HoSoNgoaiToc/them_ho_so.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Xin chào
+Thêm hồ sơ ngoại tộc
 {% endblock %}
 {% block body %}
 <!-- page content -->
@@ -8,62 +8,23 @@ Xin chào
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Hồ Sơ</h3>
-            </div>
-
-            <div class="title_right">
-                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
-                        <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Go!</button>
-                  </span>
-                    </div>
-                </div>
+                <h3>Hồ sơ ngoại tộc</h3>
             </div>
         </div>
-
         <div class="clearfix"></div>
-
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
                         <h2>Thêm hồ sơ ngoại tộc
-                            <small>Thêm thông tin chi tiết</small>
                         </h2>
-                        <ul class="nav navbar-right panel_toolbox">
-                            <li>
-                                <a class="collapse-link">
-                                    <i class="fa fa-chevron-up"></i>
-                                </a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                                    <i class="fa fa-wrench"></i>
-                                </a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li>
-                                        <a href="#">Settings 1</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Settings 2</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a class="close-link">
-                                    <i class="fa fa-close"></i>
-                                </a>
-                            </li>
-                        </ul>
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
                         <br>
-                        <form action="/Admin/HoSoNgoaiToc/postThemHoSoNT" method="post" id="demo-form2" data-parsley-validate="" class="form-horizontal form-label-left" novalidate="">
+                        <form action="/Admin/HoSoNgoaiToc/postThemHoSoNT" method="post" class="form-horizontal form-label-left" novalidate="">
                             <div class="form-group">
-                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Mã hồ sơ phụ thuộc
+                                <label class="control-label col-md-3 col-sm-3 col-xs-12">Mã hồ sơ phụ thuộc
                                     <span class="required">*</span>
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
@@ -72,7 +33,7 @@ Xin chào
                             </div>
 
                             <div class="form-group">
-                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Họ tên bố
+                                <label class="control-label col-md-3 col-sm-3 col-xs-12">Họ tên bố
                                     <span class="required">*</span>
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
@@ -80,7 +41,7 @@ Xin chào
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Họ tên mẹ
+                                <label class="control-label col-md-3 col-sm-3 col-xs-12">Họ tên mẹ
                                     <span class="required">*</span>
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
@@ -88,7 +49,7 @@ Xin chào
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Họ và tên
+                                <label class="control-label col-md-3 col-sm-3 col-xs-12">Họ và tên
                                     <span class="required">*</span>
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
@@ -113,14 +74,14 @@ Xin chào
                                     <span class="required">*</span>
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input id="birthday" name="ngaySinh" class="date-picker form-control col-md-7 col-xs-12" type="text">
+                                    <input name="ngaySinh" class="form-control col-md-7 col-xs-12" type="date">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="control-label col-md-3 col-sm-3 col-xs-12">Quê quán
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" type="text">
+                                    <input class="form-control col-md-7 col-xs-12" type="text">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -128,7 +89,7 @@ Xin chào
                                     <span class="required">*</span>
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input id="birthday" name="doiThu" class="date-picker form-control col-md-7 col-xs-12" type="text">
+                                    <input name="doiThu" class="form-control col-md-7 col-xs-12" type="text">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -136,7 +97,7 @@ Xin chào
                                     <span class="required">*</span>
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input id="birthday" name="conThu" class="date-picker form-control col-md-7 col-xs-12" type="text">
+                                    <input name="conThu" class="form-control col-md-7 col-xs-12" type="text">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -144,7 +105,7 @@ Xin chào
                                     <span class="required"></span>
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" type="text">
+                                    <input class="form-control col-md-7 col-xs-12" type="email">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -152,7 +113,7 @@ Xin chào
                                     <span class="required"></span>
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" type="text">
+                                    <input class="form-control col-md-7 col-xs-12" type="text">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -160,7 +121,7 @@ Xin chào
                                     <span class="required"></span>
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" type="text">
+                                    <input class="form-control col-md-7 col-xs-12" type="text">
                                 </div>
                             </div>
                             <div class="ln_solid"></div>
@@ -178,7 +139,6 @@ Xin chào
             </div>
         </div>
     </div>
-</div>
 </div>
 <!-- /page content -->
 
