--- a/App/Views/LoaiTin/index.html
+++ b/App/Views/LoaiTin/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Danh sách hồ sơ
+Danh sách loại tin
 {% endblock %}
 {% block body %}
 <!-- page content -->
@@ -8,23 +8,11 @@ Danh sách hồ sơ
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Danh sách Loại Tin</h3>
-            </div>
-
-            <div class="title_right">
-                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
-                        <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Go!</button>
-                  </span>
-                    </div>
-                </div>
+                <h3>Danh sách loại tin</h3>
             </div>
         </div>
 
         <div class="clearfix"></div>
-
         <div class="row">
             <div class="col-md-12">
                 <div class="x_panel">
@@ -60,7 +48,7 @@ Danh sách hồ sơ
                                     </form>
                                 </div>
                                 <div class="modal-footer">
-                                    <button class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button class="btn btn-secondary" data-dismiss="modal">Đóng</button>
                                     <button class="btn btn-success" type="submit" form="danh-muc" value="Submit">Thêm
                                     </button>
                                 </div>
