--- a/App/Views/ThanhVien/chinh_sua_thong_tin.html
+++ b/App/Views/ThanhVien/chinh_sua_thong_tin.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Xin chào
+Trang cá nhân
 {% endblock %}
 {% block body %}
 <!-- page content -->
@@ -8,47 +8,18 @@ Xin chào
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Hồ Sơ</h3>
-            </div>
-
-            <div class="title_right">
-                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
-                        <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Go!</button>
-                  </span>
-                    </div>
-                </div>
+                <h3>Trang cá nhân</h3>
             </div>
         </div>
-
         <div class="clearfix"></div>
-
         <div class="row">
 
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>Đổi thông tin tài khoản
-                            <small>{{account.id}}</small>
+                        <h2>Thông tin tài khoản
+                            <small>ID: {{account.id}}</small>
                         </h2>
-                        <ul class="nav navbar-right panel_toolbox">
-                            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                   aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Settings 1</a>
-                                    </li>
-                                    <li><a href="#">Settings 2</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li><a class="close-link"><i class="fa fa-close"></i></a>
-                            </li>
-                        </ul>
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
@@ -61,7 +32,7 @@ Xin chào
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     <input type="text" id="name" name="name" required="required"
-                                           class="form-control col-md-7 col-xs-12 parsley-success" data-parsley-id="5" value="{{account.name}}">
+                                           class="form-control col-md-7 col-xs-12" value="{{account.name}}">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -85,7 +56,7 @@ Xin chào
                                 <label for="email" class="control-label col-md-3 col-sm-3 col-xs-12">Email </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     <input id="email" class="form-control col-md-7 col-xs-12" type="text"
-                                           name="email" data-parsley-id="9" value="{{account.email}}">
+                                           name="email" value="{{account.email}}">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -112,8 +83,7 @@ Xin chào
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     <input id="birthday"
-                                           class="date-picker form-control col-md-7 col-xs-12 parsley-success"
-                                           required="required" type="text" data-parsley-id="16" value="1/1/1997">
+                                           class="date-picker form-control col-md-7 col-xs-12" type="text">
                                     <ul class="parsley-errors-list" id="parsley-id-16"></ul>
                                 </div>
                             </div>
@@ -126,9 +96,9 @@ Xin chào
                             <div class="ln_solid"></div>
                             <div class="form-group">
                                 <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                                    <button class="btn btn-primary" type="button">Cancel</button>
-                                    <button class="btn btn-primary" type="reset">Reset</button>
-                                    <button type="submit" class="btn btn-success">Submit</button>
+                                    <button class="btn btn-primary" type="button">Hủy</button>
+                                    <button class="btn btn-primary" type="reset">Đặt lại</button>
+                                    <button type="submit" class="btn btn-success">Cập nhật</button>
                                 </div>
                             </div>
 
