--- a/App/Views/ThanhVien/danh_sach.html
+++ b/App/Views/ThanhVien/danh_sach.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Xin chào
+Danh sách thành viên
 {% endblock %}
 {% block body %}
 <!-- page content -->
@@ -8,53 +8,14 @@ Xin chào
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Hồ Sơ</h3>
-            </div>
-
-            <div class="title_right">
-                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
-                        <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Go!</button>
-                  </span>
-                    </div>
-                </div>
+                <h3>Danh sách thành viên</h3>
             </div>
         </div>
-
         <div class="clearfix"></div>
-
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
-                    <div class="x_title">
-                        <h2>Default Example
-                            <small>Users</small>
-                        </h2>
-                        <ul class="nav navbar-right panel_toolbox">
-                            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                   aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Settings 1</a>
-                                    </li>
-                                    <li><a href="#">Settings 2</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li><a class="close-link"><i class="fa fa-close"></i></a>
-                            </li>
-                        </ul>
-                        <div class="clearfix"></div>
-                    </div>
                     <div class="x_content">
-                        <p class="text-muted font-13 m-b-30">
-                            DataTables has most features enabled by default, so all you need to do to use it with your
-                            own tables is to call the construction function: <code>$().DataTable();</code>
-                        </p>
                         <table id="datatable" class="table table-striped table-bordered">
                             <thead>
                             <tr>
@@ -62,8 +23,8 @@ Xin chào
                                 <th>Họ và tên</th>
                                 <th>Email</th>
                                 <th>Kích hoạt</th>
-                                <th>Ngày tạo</th>
-                                <th>Mã hồ sơ quản lý</th>
+                                <th>Ngày khởi tạo</th>
+                                <th>MHS quản lý</th>
                                 <th>Hành động</th>
                             </tr>
                             </thead>
@@ -87,13 +48,7 @@ Xin chào
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
-</div>
-</div>
-<!-- /page content -->
-<!-- /page content -->
-
 {% endblock %}
