--- a/App/Views/TimKiem/result_search.html
+++ b/App/Views/TimKiem/result_search.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Xin chào
+Kết quả tìm kiếm
 {% endblock %}
 {% block body %}
 <!-- page content -->
@@ -8,7 +8,7 @@ Xin chào
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Hồ Sơ</h3>
+                <h3>Danh sách hồ sơ</h3>
             </div>
 
             <div class="title_right">
@@ -18,7 +18,7 @@ Xin chào
                         <div class="input-group">
                             <input type="text" name="key" class="form-control" placeholder="Từ khóa...">
                             <span class="input-group-btn">
-                    <button class="btn btn-default" type="submit" value="submit" form="search">Go!</button>
+                    <button class="btn btn-default" type="submit" value="submit" form="search"><i class="fa fa-search"></i></button>
                   </span>
 
                         </div>
