--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -7,7 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Website Quản Lý Gia Phả | </title>
+    <title>
+        {% block title %}
+        {% endblock %}
+        | Website Quản Lý Gia Phả
+    </title>
 
     <!-- Bootstrap -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -23,6 +27,7 @@
     <link href="/css/dataTables.bootstrap.min.css" rel="stylesheet">
     <link href="/css/pnotify.css" rel="stylesheet">
     <link href="/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <link href="/css/clndr.css" rel="stylesheet">
     {% block external_css %}
     {% endblock %}
 </head>
@@ -36,7 +41,6 @@
                 </div>
 
                 <div class="clearfix"></div>
-
                 <!-- menu profile quick info -->
                 <div class="profile clearfix">
                     <div class="profile_pic">
@@ -45,18 +49,15 @@
                         {% else %}
                         <img src="/images/AnhDaiDien/camera.png" alt="..." class="img-circle profile_img">
                         {% endif %}
-
                     </div>
                     {% if current_user %}
                     <div class="profile_info">
                         <span>Xin chào,</span>
                         <h2>{{ current_user.name }}</h2>
-                        <a href="/logout">Đăng xuất</a>
                     </div>
                     {% else %}
                     <a href="/signup/new">Đăng ký</a> hoặc <a href="/login">Đăng nhập</a>.
                     {% endif %}
-
                     <div class="clearfix"></div>
                 </div>
                 <!-- /menu profile quick info -->
@@ -70,29 +71,29 @@
                         <ul class="nav side-menu">
                             <li><a><i class="fa fa-home"></i> Trang chủ <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="/user/home/index">Tin tức</a></li>
+                                    <li><a href="/user/home/index"><i class="fa fa-newspaper-o" aria-hidden="true"></i>Tin tức</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-edit"></i> Sơ đồ gia phả <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-sitemap" aria-hidden="true"></i></i>
+                                Phả đồ <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="/giapha/giaPhaDangDung">Dạng đứng</a></li>
-                                    <li><a href="/giapha/index">Dạng cây</a></li>
-                                    <li><a href="profile.html">Tra cứu cách xưng hô</a></li>
+                                    <li><a href="/giapha/giaPhaDangDung"><i class="fa fa-list-ol" aria-hidden="true"></i>Dạng đứng</a></li>
+                                    <li><a href="/giapha/index"><i class="fa fa-sitemap" aria-hidden="true"></i>Dạng cây</a></li>
+                                    <li><a href="profile.html"><i class="fa fa-handshake-o" aria-hidden="true"></i>Tra cứu cách xưng hô</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-desktop"></i> Thành viên <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-users" aria-hidden="true"></i></i> Thành viên <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="/admin/thanhvien/index">Danh sách thành viên</a></li>
-                                    <li><a href="/admin/thanhvien/capquyen">Cấp quyền quản trị</a></li>
-                                    <li><a href="/admin/users/chinhsua">Thay đổi thông tin tài khoản</a></li>
+                                    <li><a href="/admin/thanhvien/index"><i class="fa fa-list-alt" aria-hidden="true"></i>Danh sách thành viên</a></li>
+                                    <li><a href="/admin/thanhvien/capquyen"><i class="fa fa-code-fork" aria-hidden="true"></i>Cấp quyền quản trị</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-table"></i> Quản lý bài viết <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-cloud-upload"></i> Quản lý bài viết <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="/admin/baiviet/getThemBaiViet">Viết bài</a></li>
-                                    <li><a href="/admin/baiviet/getDanhSachBaiViet">Danh sách bài viết</a></li>
-                                    <li><a href="/admin/loaitin/index">Cập nhật danh mục</a></li>
-                                    <li><a href="/xem-lich">Xem lịch</a></li>
+                                    <li><a href="/admin/baiviet/getThemBaiViet"><i class="fa fa-pencil-square-o"></i> Viết bài</a></li>
+                                    <li><a href="/admin/baiviet/getDanhSachBaiViet"><i class="fa fa-bars"></i>Danh sách bài viết</a></li>
+                                    <li><a href="/admin/loaitin/index"><i class="fa fa-archive" aria-hidden="true"></i>Cập nhật danh mục</a></li>
+                                    <li><a href="/xem-lich"><i class="fa fa-calendar" aria-hidden="true"></i>Xem lịch</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -100,15 +101,15 @@
                     <div class="menu_section">
                         <h3>Hồ sơ</h3>
                         <ul class="nav side-menu">
-                            <li><a><i class="fa fa-bug"></i> Quản lý hồ sơ <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-id-card-o" aria-hidden="true"></i> Quản lý hồ sơ <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
                                     <li><a href="/themhoso/index">Thêm hồ sơ</a></li>
                                     <li><a href="/admin/hoso/index">Danh sách hồ sơ</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-windows"></i> Admin <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-bell" aria-hidden="true"></i> Admin <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="page_403.html">Gửi email tới các thành viên</a></li>
+                                    <li><a href="page_403.html"><i class="fa fa-telegram" aria-hidden="true"></i> Gửi email tới các thành viên</a></li>
                                 </ul>
                             </li>
                             <li><a><i class="fa fa-sitemap"></i> Xem theo đời <span
@@ -148,7 +149,7 @@
                     <a data-toggle="tooltip" data-placement="top" title="Lock">
                         <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
                     </a>
-                    <a data-toggle="tooltip" data-placement="top" title="Logout" href="login.html">
+                    <a data-toggle="tooltip" data-placement="top" title="Logout" href="/logout">
                         <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
                     </a>
                 </div>
@@ -265,7 +266,7 @@
         <!-- footer content -->
         <footer>
             <div class="pull-right">
-                Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+                Quản lý Gia phả Online - <a href="#">Phiên bản di động</a>
             </div>
             <div class="clearfix"></div>
         </footer>
@@ -294,6 +295,7 @@
 <script src="/js/custom.min.js"></script>
 <script src="/js/jquery.zoomooz.min.js"></script>
 <script src="/js/jquery.zoomooz-zoomContainer.js"></script>
+<script src="/js/clndr.js"></script>
 {% for message in flash_messages %}
 <script>
     new PNotify({
@@ -303,10 +305,7 @@
         styling: 'bootstrap3'
     });
 </script>
-
 {% endfor %}
-
-
 {% block footer %}
 {% endblock %}
 </body>
