--- a/App/Views/base_login.html
+++ b/App/Views/base_login.html
@@ -7,8 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}
-        {% endblock %}</title>
+    <title>
+        {% block title %}
+        {% endblock %}
+    </title>
 
     <!-- Bootstrap -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
